--- a/index.html
+++ b/index.html
@@ -9,18 +9,46 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="col-45">
             <h1>Welcome To</h1>
             <h1><span class="name">Shoun Parker</span> World</h1>
             <h3>World class web developer</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-        
+            <a class="link-btn" target="_blank" href="#">HIRE ME</a>
         </div>
         <div class="col-45">
-            <img src="img/shoun.png" alt="">
+            <img src="img/shoun.png" alt="topimg">
         </div>
         
     </section>
+    <section class="dream-area">
+        <div class="col-45">
+            <img src="img/dream.png" alt="dream">
+        </div>
+        <div class="col-45">
+            <h2>Dream Big</h2>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-btn" target="blank" href="#">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
+    <section class="experiences">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="col-45 single-experiences">
+            <h2>Full Stack Web Developer</h2>
+            <h3>2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="babyweb" class="col-45 single-experiences">
+            <h2>Baby Web Developer</h2>
+            <h3>2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
